tests/macros/int/plugin.stderr
error: option `plugin` does not exist for kind `int`
 --> $DIR/plugin.rs:2:43
  |
2 |     let q = inquisition::questions![Int { plugin: todo!() }];
  |                                           ^^^^^^
