tests/macros/int/plugin.rs
fn main() {
    let q = inquisition::questions![Int { plugin: todo!() }];
}
